--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Frontend - Tools</title>
+    <title>Dashboard</title>
     <!-- normalize file  -->
     <link rel="stylesheet" href="css/normalize.css">
      <!-- include fontawesome -->
@@ -88,6 +88,7 @@
                 </div>
             </div>
             <!-- end head -->
+
         </div>
     </div>
 </body>
