make welcome and quick draft widgets

--- a/index.html
+++ b/index.html
@@ -88,6 +88,38 @@
                 </div>
             </div>
             <!-- end head -->
+            <h1 class="main-heading">Dashboard</h1>
+            <div class="wrapper">
+                <!-- start welcome widget -->
+                <div class="welcome">
+                    <div class="intro">
+                        <div class="intro-text">
+                            <h2>Welcome</h2>
+                            <p>Khodor</p>
+                        </div>
+                        <img src="imgs/welcome-removebg-preview.png" alt="">
+                    </div>
+                    <img src="imgs/avatar.jpg" alt="avatar" class="avatar">
+                    <div class="welcome-body">
+                        <div>Khodor Shhoury<span>Frontend Dev.</span></div>
+                        <div>80<span>projects</span></div>
+                        <div>$11400<span>Earned</span></div>
+                    </div>
+                    <a href="profile.html" class="visit main-link">profile</a>
+                </div>
+                <!-- end welcome widget -->
+                <!-- start quick draft widget -->
+                <div class="quick-draft">
+                    <h2 class="">Quick Draft</h2>
+                    <p>Write A Draft For Your Ideas</p>
+                    <form>
+                        <input type="text" placeholder="Title">
+                        <textarea placeholder="Your Thoughts"></textarea>
+                        <input class="main-link save" type="submit" value="save">
+                    </form>
+                </div>
+                <!-- end quick draft widget -->
+            </div>
         </div>
     </div>
 </body>
