--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 <!-- end welcome widget -->
                 <!-- start quick draft widget -->
                 <div class="quick-draft">
-                    <h2 class="">Quick Draft</h2>
+                    <h2>Quick Draft</h2>
                     <p>Write A Draft For Your Ideas</p>
                     <form>
                         <input type="text" placeholder="Title">
@@ -119,6 +119,54 @@
                     </form>
                 </div>
                 <!-- end quick draft widget -->
+                <!-- start yearly target -->
+                <div class="yearly-target">
+                    <h2> Yearly Target</h2>
+                    <p>Targets of the year</p>
+                    <div class="target-row money">
+                        <div class="icon">
+                            <i class="fa-solid fa-dollar-sign fa-lg"></i>
+                        </div>
+                        <div class="details">
+                            <span class="title">Money</span>
+                            <span class="number">$20,000</span>
+                            <div class="progress">
+                                <span style="width: 40%;">
+                                    <span>40%</span>
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="target-row projects">
+                        <div class="icon">
+                            <i class="fa-solid fa-progra fa-lg"></i>
+                        </div>
+                        <div class="details">
+                            <span class="title">Money</span>
+                            <span class="number">$20,000</span>
+                            <div class="progress">
+                                <span style="width: 40%;">
+                                    <span>40%</span>
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="target-row team">
+                        <div class="icon">
+                            <i class="fa-solid fa-user fa-lg"></i>
+                        </div>
+                        <div class="details">
+                            <span class="title">Money</span>
+                            <span class="number">$20,000</span>
+                            <div class="progress">
+                                <span style="width: 40%;">
+                                    <span>40%</span>
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- end yearly target -->
             </div>
         </div>
     </div>
