complete yearly target widgets

--- a/index.html
+++ b/index.html
@@ -131,22 +131,22 @@
                             <span class="title">Money</span>
                             <span class="number">$20,000</span>
                             <div class="progress">
-                                <span style="width: 40%;">
-                                    <span>40%</span>
+                                <span style="width: 30%;">
+                                    <span>30%</span>
                                 </span>
                             </div>
                         </div>
                     </div>
                     <div class="target-row projects">
                         <div class="icon">
-                            <i class="fa-solid fa-progra fa-lg"></i>
+                            <i class="fa-solid fa-code fa-lg"></i>
                         </div>
                         <div class="details">
-                            <span class="title">Money</span>
-                            <span class="number">$20,000</span>
+                            <span class="title">projects</span>
+                            <span class="number">34</span>
                             <div class="progress">
-                                <span style="width: 40%;">
-                                    <span>40%</span>
+                                <span style="width: 70%;">
+                                    <span>70%</span>
                                 </span>
                             </div>
                         </div>
@@ -156,11 +156,11 @@
                             <i class="fa-solid fa-user fa-lg"></i>
                         </div>
                         <div class="details">
-                            <span class="title">Money</span>
-                            <span class="number">$20,000</span>
+                            <span class="title">team</span>
+                            <span class="number">15</span>
                             <div class="progress">
-                                <span style="width: 40%;">
-                                    <span>40%</span>
+                                <span style="width: 85%;">
+                                    <span>85%</span>
                                 </span>
                             </div>
                         </div>
