make notification widget

--- a/index.html
+++ b/index.html
@@ -90,6 +90,19 @@
             <!-- end head -->
             <h1 class="main-heading">Dashboard</h1>
             <div class="wrapper">
+                <!-- start news -->
+                <div class="news">
+                    <div class="massage">
+                        <h3>Congratulations Khodor!</h3>
+                        <p>You have done 72% more sales today. Check your new badge in your profile</p>
+                        <div class="links">
+                        <a href="profile.html" class="main-link">View Badges</a>
+                        <span class="continue">continue</span>
+                        </div>
+                    </div>
+                    <img src="imgs/notification.png">
+                </div>
+                <!-- end news -->
                 <!-- start welcome widget -->
                 <div class="welcome">
                     <div class="intro">
@@ -131,8 +144,8 @@
                             <span class="title">Money</span>
                             <span class="number">$20,000</span>
                             <div class="progress">
-                                <span style="width: 30%;">
-                                    <span>30%</span>
+                                <span style="width: 80%;">
+                                    <span>80%</span>
                                 </span>
                             </div>
                         </div>
@@ -167,6 +180,7 @@
                     </div>
                 </div>
                 <!-- end yearly target -->
+                
             </div>
         </div>
     </div>
