make statistics widget

--- a/index.html
+++ b/index.html
@@ -91,18 +91,72 @@
             <h1 class="main-heading">Dashboard</h1>
             <div class="wrapper">
                 <!-- start news -->
+
                 <div class="news">
                     <div class="massage">
                         <h3>Congratulations Khodor!</h3>
                         <p>You have done 72% more sales today. Check your new badge in your profile</p>
                         <div class="links">
-                        <a href="profile.html" class="main-link">View Badges</a>
+                        <a href="profile.html" class="main-link borderd">View Badges</a>
                         <span class="continue">continue</span>
                         </div>
                     </div>
-                    <img src="imgs/notification.png">
+                    <div class="image">
+                        <img src="imgs/notification.png">
+                    </div>
                 </div>
                 <!-- end news -->
+                <div class="statistics">
+                    <div class="box students">
+                        <div class="icon">
+                            <i class="fa-solid fa-users fa-lg"></i>
+                        </div>
+                        <div class="text">
+                            <span class="title">Students</span>
+                            <span class="number">2k</span>
+                            <span class="date">Feb 1 - Apr 1.WorldWide</span>
+                            <div class="result">
+                                <span>65.4%</span>Sins Last Month
+                            </div>
+                        </div>
+                    </div>
+                    <div class="box courses">
+                        <div class="icon">
+                            <i class="fa-solid fa-book-open fa-lg"></i>
+                        </div>
+                        <div class="text">
+                            <span class="title">Courses</span>
+                            <span class="number">23</span>
+                            <span class="date">Feb 1 - Apr 1.WorldWide</span>
+                            <div class="result">
+                                <span>18.2%</span>Sins Last Month
+                            </div>
+                        </div>
+                    </div>
+                    <div class="box revenue">
+                        <div class="icon">
+                            <i class="fa-solid fa-money-bill fa-lg"></i>
+                        </div>
+                        <div class="text">
+                            <span class="title">Revenue</span>
+                            <span class="number">$12,040</span>
+                            <span class="date">Feb 1 - Apr 1</span>
+                            <div class="result">
+                                <span>5.2%</span>Sins Last Month
+                            </div>
+                        </div>
+                    </div>
+                    <div class="box Earnings">
+                        <div class="icon">
+                            <i class="fa-solid fa-money-check-alt fa-lg"></i>
+                        </div>
+                        <div class="text">
+                            <span class="title">All Earnings</span>
+                            <span class="number">$105,020</span>
+                            
+                        </div>
+                    </div>
+                </div>
                 <!-- start welcome widget -->
                 <div class="welcome">
                     <div class="intro">
@@ -110,7 +164,7 @@
                             <h2>Welcome</h2>
                             <p>Khodor</p>
                         </div>
-                        <img src="imgs/welcome-removebg-preview.png" alt="">
+                        <img src="imgs/welcome.png" alt="">
                     </div>
                     <img src="imgs/avatar.jpg" alt="avatar" class="avatar">
                     <div class="welcome-body">
@@ -180,7 +234,6 @@
                     </div>
                 </div>
                 <!-- end yearly target -->
-                
             </div>
         </div>
     </div>
