make activities widget

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <div class="wrapper">
                 <!-- start news -->
 
-                <div class="news">
+                <div class="notification">
                     <div class="massage">
                         <h3>Congratulations Khodor!</h3>
                         <p>You have done 72% more sales today. Check your new badge in your profile</p>
@@ -153,7 +153,7 @@
                         <div class="text">
                             <span class="title">All Earnings</span>
                             <span class="number">$105,020</span>
-                            
+                            <span class="date">All Time</span>
                         </div>
                     </div>
                 </div>
@@ -177,8 +177,8 @@
                 <!-- end welcome widget -->
                 <!-- start quick draft widget -->
                 <div class="quick-draft">
-                    <h2>Quick Draft</h2>
-                    <p>Write A Draft For Your Ideas</p>
+                    <h2 class="main-box-heading">Quick Draft</h2>
+                    <p class="main-box-paragraph">Write A Draft For Your Ideas</p>
                     <form>
                         <input type="text" placeholder="Title">
                         <textarea placeholder="Your Thoughts"></textarea>
@@ -188,8 +188,8 @@
                 <!-- end quick draft widget -->
                 <!-- start yearly target -->
                 <div class="yearly-target">
-                    <h2> Yearly Target</h2>
-                    <p>Targets of the year</p>
+                    <h2 class="main-box-heading"> Yearly Target</h2>
+                    <p class="main-box-paragraph">Targets of the year</p>
                     <div class="target-row money">
                         <div class="icon">
                             <i class="fa-solid fa-dollar-sign fa-lg"></i>
@@ -209,8 +209,8 @@
                             <i class="fa-solid fa-code fa-lg"></i>
                         </div>
                         <div class="details">
-                            <span class="title">projects</span>
-                            <span class="number">34</span>
+                            <span class="title">courses</span>
+                            <span class="number">85</span>
                             <div class="progress">
                                 <span style="width: 70%;">
                                     <span>70%</span>
@@ -234,6 +234,96 @@
                     </div>
                 </div>
                 <!-- end yearly target -->
+                <!-- start tickets -->
+                <div class="tickets-stats">
+                    <h2 class="main-box-heading">Tickets Statistics</h2>
+                    <p class="main-box-paragraph">EveryThing About support Tickets</p>
+                    <div class="stats">
+                        <div class="box total">
+                            <i class="fa-solid fa-ticket fa-lg"></i>
+                            <h4>Total:</h4>
+                            <span>1000</span>
+                        </div>
+                        <div class="box pending">
+                            <i class="fa-solid fa-spinner fa-lg"></i>
+                            <h4>pending:</h4>
+                            <span>1000</span>
+                        </div>
+                        <div class="box closed">
+                            <i class="fa-regular fa-circle-check fa-lg"></i>
+                            <h4>closed:</h4>
+                            <span>1000</span>
+                        </div>
+                        <div class="box deleted">
+                            <i class="fa-regular fa-rectangle-xmark fa-lg"></i>
+                            <h4>deleted:</h4>
+                            <span>1000</span>
+                        </div>
+                    </div>
+                </div>
+                <!-- end tickets -->
+                <!-- start news -->
+                <div class="my-activity">
+                    <h2 class="main-box-heading">My Activities</h2>
+                    <p class="main-box-paragraph">My Latest Activities</p>
+                    <div class="timelines">
+                        <div class="timeline">
+                            <div class="timeline-label">08:42</div>
+                            <div class="timeline-badge">
+                                <i class="fa fa-genderless success fa-lg danger"></i>
+                            </div>
+                            <div class="timeline-content">
+                                Make deposit USD 700. to ESL
+                            </div>
+                        </div>
+                        <div class="timeline">
+                            <div class="timeline-label">10:00</div>
+                            <div class="timeline-badge">
+                                <i class="fa fa-genderless success fa-lg"></i>
+                            </div>
+                            <div class="timeline-content">
+                                Outlines keep you honest. And keep structure
+                            </div>
+                        </div>
+                        <div class="timeline">
+                            <div class="timeline-label">14:14</div>
+                            <div class="timeline-badge">
+                                <i class="fa fa-genderless success fa-lg warning"></i>
+                            </div>
+                            <div class="timeline-content">
+                                AEOL meeting
+                            </div>
+                        </div>
+                        <div class="timeline">
+                            <div class="timeline-label">16:30</div>
+                            <div class="timeline-badge">
+                                <i class="fa fa-genderless success fa-lg"></i>
+                            </div>
+                            <div class="timeline-content">
+                                Indulging in poorly driving and keep structure keep great
+                            </div>
+                        </div>
+                        <div class="timeline">
+                            <div class="timeline-label">21:55</div>
+                            <div class="timeline-badge">
+                                <i class="fa fa-genderless success fa-lg info"></i>
+                            </div>
+                            <div class="timeline-content">
+                                New order placed #XF-2356.
+                            </div>
+                        </div>
+                        <div class="timeline">
+                            <div class="timeline-label">23:00</div>
+                            <div class="timeline-badge">
+                                <i class="fa fa-genderless success fa-lg"></i>
+                            </div>
+                            <div class="timeline-content">
+                                Outlines keep and you honest. Indulging in poorly driving
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- end news -->
             </div>
         </div>
     </div>
