make latest news widget

--- a/index.html
+++ b/index.html
@@ -90,8 +90,7 @@
             <!-- end head -->
             <h1 class="main-heading">Dashboard</h1>
             <div class="wrapper">
-                <!-- start news -->
-
+                <!-- start notification -->
                 <div class="notification">
                     <div class="massage">
                         <h3>Congratulations Khodor!</h3>
@@ -105,7 +104,8 @@
                         <img src="imgs/notification.png">
                     </div>
                 </div>
-                <!-- end news -->
+                <!-- end notification -->
+                <!-- start statistics -->
                 <div class="statistics">
                     <div class="box students">
                         <div class="icon">
@@ -157,6 +157,7 @@
                         </div>
                     </div>
                 </div>
+                <!-- end statistics -->
                 <!-- start welcome widget -->
                 <div class="welcome">
                     <div class="intro">
@@ -242,27 +243,27 @@
                         <div class="box total">
                             <i class="fa-solid fa-ticket fa-lg"></i>
                             <h4>Total:</h4>
-                            <span>1000</span>
+                            <span>2054</span>
                         </div>
                         <div class="box pending">
                             <i class="fa-solid fa-spinner fa-lg"></i>
                             <h4>pending:</h4>
-                            <span>1000</span>
+                            <span>215</span>
                         </div>
                         <div class="box closed">
                             <i class="fa-regular fa-circle-check fa-lg"></i>
                             <h4>closed:</h4>
-                            <span>1000</span>
+                            <span>1719</span>
                         </div>
                         <div class="box deleted">
                             <i class="fa-regular fa-rectangle-xmark fa-lg"></i>
                             <h4>deleted:</h4>
-                            <span>1000</span>
+                            <span>120</span>
                         </div>
                     </div>
                 </div>
                 <!-- end tickets -->
-                <!-- start news -->
+                <!-- start my activities -->
                 <div class="my-activity">
                     <h2 class="main-box-heading">My Activities</h2>
                     <p class="main-box-paragraph">My Latest Activities</p>
@@ -321,9 +322,64 @@
                                 Outlines keep and you honest. Indulging in poorly driving
                             </div>
                         </div>
+                        <div class="timeline">
+                            <div class="timeline-label">23:23</div>
+                            <div class="timeline-badge">
+                                <i class="fa fa-genderless danger fa-lg"></i>
+                            </div>
+                            <div class="timeline-content">
+                                Outlines keep and you honest. Indulging in poorly driving
+                            </div>
+                        </div>
+                        <div class="timeline">
+                            <div class="timeline-label">24:00</div>
+                            <div class="timeline-badge">
+                                <i class="fa fa-genderless warning fa-lg"></i>
+                            </div>
+                            <div class="timeline-content">
+                                Outlines keep and you honest. Indulging in poorly driving
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <!-- end news -->
+                <!-- end my activities -->
+                <!-- start latest news -->
+                <div class="latest-news">
+                    <h2 class="main-box-heading">Latest news</h2>
+                    <div class="news-row">
+                        <img src="imgs/news-01.png" alt="">
+                        <div class="content">
+                            <h3>Team Increased</h3>
+                            <p>6 members joined our team</p>
+                        </div>
+                        <div class="date">4 hours ago</div>
+                    </div>
+                    <div class="news-row">
+                        <img src="imgs/news-02.png" alt="">
+                        <div class="content">
+                            <h3>Changed the design</h3>
+                            <p>A Brand New Website Design</p>
+                        </div>
+                        <div class="date">16 hours ago</div>
+                    </div>
+                    <div class="news-row">
+                        <img src="imgs/news-03.png" alt="">
+                        <div class="content">
+                            <h3>Added Payment Gateway</h3>
+                            <p>Many New Payment Gateway's Added</p>
+                        </div>
+                        <div class="date">1 day ago</div>
+                    </div>
+                    <div class="news-row">
+                        <img src="imgs/news-04.png" alt="">
+                        <div class="content">
+                            <h3>Team Increased</h3>
+                            <p>6 members joined our team</p>
+                        </div>
+                        <div class="date">3 days ago</div>
+                    </div>
+                </div>
+                <!-- end latest news -->
             </div>
         </div>
     </div>
