make top search widget

--- a/index.html
+++ b/index.html
@@ -380,6 +380,36 @@
                     </div>
                 </div>
                 <!-- end latest news -->
+                <!-- start tasks -->
+                <div class="top-search">
+                    <h2 class="main-box-heading">Top Search Items</h2>
+                    <div class="items-head">
+                        <div>keyword</div>
+                        <div>Search Count</div>
+                    </div>
+                    <div class="items">
+                        <span class="keyword">javascript</span>
+                        <span class="count">5047</span>
+                    </div>
+                    <div class="items">
+                        <span class="keyword">python</span>
+                        <span class="count">3037</span>
+                    </div>
+                    <div class="items">
+                        <span class="keyword">programming</span>
+                        <span class="count">2022</span>
+                    </div>
+                    <div class="items">
+                        <span class="keyword">Design</span>
+                        <span class="count">1050</span>
+                    </div>
+                    <div class="items">
+                        <span class="keyword">Logic</span>
+                        <span class="count">534</span>
+                    </div>
+                </div>
+                <!-- end tasks -->
+                
             </div>
         </div>
     </div>
