make upload files box

--- a/index.html
+++ b/index.html
@@ -409,7 +409,71 @@
                     </div>
                 </div>
                 <!-- end tasks -->
-                
+                <div class="latest-uploads">
+                    <h2>Latest Uploads</h2>
+                        <ul>
+                            <li>
+                                <div class="content">
+                                    <img src="imgs/pdf.svg" alt="">
+                                    <div>
+                                        <span class="file-name">My-File.pdf</span>
+                                        <span class="person-name">Khodor</span>
+                                    </div>
+                                </div>
+                                <div class="file-space">2.9mb</div>
+                            </li>
+                            <li>
+                                <div class="content">
+                                    <img src="imgs/psd.svg" alt="">
+                                    <div>
+                                        <span class="file-name">My-Psd-File.psd</span>
+                                        <span class="person-name">Khodor</span>
+                                    </div>
+                                </div>
+                                <div class="file-space">14mb</div>
+                            </li>
+                            <li>
+                                <div class="content">
+                                    <img src="imgs/zip.svg" alt="">
+                                    <div>
+                                        <span class="file-name">My-Zip-File.zip</span>
+                                        <span class="person-name">Khodor</span>
+                                    </div>
+                                </div>
+                                <div class="file-space">4.5mb</div>
+                            </li>
+                            <li>
+                                <div class="content">
+                                    <img src="imgs/avi.svg" alt="">
+                                    <div>
+                                        <span class="file-name">My-Video-File.avi</span>
+                                        <span class="person-name">Khodor</span>
+                                    </div>
+                                </div>
+                                <div class="file-space">6.3mb</div>
+                            </li>
+                            <li>
+                                <div class="content">
+                                    <img src="imgs/dll.svg" alt="">
+                                    <div>
+                                        <span class="file-name">My-Dll-file.dll</span>
+                                        <span class="person-name">Khodor</span>
+                                    </div>
+                                </div>
+                                <div class="file-space">6.9mb</div>
+                            </li>
+                            <li>
+                                <div class="content">
+                                    <img src="imgs/eps.svg" alt="">
+                                    <div>
+                                        <span class="file-name">My-Eps-File.eps</span>
+                                        <span class="person-name">Khodor</span>
+                                    </div>
+                                </div>
+                                <div class="file-space">10.3mb</div>
+                            </li>
+                        </ul>
+                </div>
             </div>
         </div>
     </div>
