make reminders widget

--- a/index.html
+++ b/index.html
@@ -474,6 +474,47 @@
                             </li>
                         </ul>
                 </div>
+                <div class="reminders">
+                    <h2 class="main-box-heading">Reminders</h2>
+                    <ul>
+                        <li>
+                            <div class="icon ">
+                                <i class="fa-solid fa-bell fa-lg"></i>
+                            </div>
+                            <div class="content">
+                                <p>check last messages</p>
+                                <span>28/07/2022 - 11:45am</span>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="icon">
+                                <i class="fa-solid fa-bell fa-lg"></i>
+                            </div>
+                            <div class="content">
+                                <p>join the meeting</p>
+                                <span>28/07/2022 - 12:00am</span>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="icon ">
+                                <i class="fa-solid fa-bell fa-lg"></i>
+                            </div>
+                            <div class="content">
+                                <p>do some exercises</p>
+                                <span>28/07/2022 - 11:45am</span>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="icon">
+                                <i class="fa-solid fa-bell fa-lg"></i>
+                            </div>
+                            <div class="content">
+                                <p>check tasks list</p>
+                                <span>28/07/2022 - 11:45am</span>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
